--- a/bathrobe.html
+++ b/bathrobe.html
@@ -5,6 +5,10 @@
   centered buttons, larger subheads, CTA that starts moving after a delay and
   travels to the bottom of the details card. Floating CTA overlays content and
   turns transparent only while scrolled (gold style; gray on hover).
+
+  UPDATE: Enforced selection flow:
+  1) Color  →  2) Size (S/M/L)  →  3) Quantity
+  Size & quantity stay disabled until previous step is chosen.
 -->
 <html lang="en">
 <head>
@@ -13,10 +17,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
   <!-- SEO -->
-  <meta name="description" content="Kenno bathrobe with chambray-trimmed finishes and belt. Recycled-blend textile (75% cotton, 25% polyester) with lively, soft texture. Sizes S/M, L/XL, XXL/XXXL." />
+  <meta name="description" content="Kenno bathrobe with chambray-trimmed finishes and belt. Recycled-blend textile (75% cotton, 25% polyester) with lively, soft texture. Sizes S, M, L." />
   <link rel="canonical" href="https://www.eliraliving.com/bathrobe.html" />
   <meta property="og:title" content="Kenno Bathrobe — ELIRA LIVING" />
-  <meta property="og:description" content="Refined comfort in recycled-blend fabric with chambray trim. Available in Black and Grey. Product code RK4KTM." />
+  <meta property="og:description" content="Refined comfort in recycled-blend fabric with chambray trim. Available in multiple colors. Product code RK4KTM." />
   <meta property="og:url" content="https://www.eliraliving.com/bathrobe.html" />
   <meta property="og:image" content="https://res.cloudinary.com/dkk8ohmu7/image/upload/f_auto,q_auto,w_1200/v1760782022/Dark_Blue_1._mpj0zr.png" />
   <meta name="twitter:card" content="summary_large_image" />
@@ -35,7 +39,7 @@
       --ink-900:#111; --ink-800:#1c1c1c; --ink-700:#2a2a2a; --ink-600:#444; --ink-500:#666; --ink-400:#888;
       --ui-050:#fcfcfc; --ui-100:#fafafa; --ui-200:#f5f5f5; --ui-300:#eee; --ui-400:#e6e6e6;
       --brand:#1d6fa7; --brand-100: rgba(29,111,167,.12);
-      --gold:#C9A227; /* NEW: gold accent for floating CTA */
+      --gold:#C9A227;
       --cta-shift: 0px; /* updated by JS */
     }
 
@@ -94,6 +98,15 @@
     .button.icon:before{ margin-right:.5rem; transform:none; }
     .actions-top .button.primary{ box-shadow:0 6px 16px rgba(29,111,167,.18); }
 
+    /* Disable style */
+    .button[disabled],
+    .pill[disabled],
+    .qty button[disabled],
+    .qty input[disabled]{
+      opacity:.5; cursor:not-allowed; pointer-events:none;
+    }
+    .muted{ opacity:.5; }
+
     /* Only the primary CTA moves; can overlay content when floating */
     .cta-primary{
       position:relative; z-index:2;
@@ -109,14 +122,11 @@
       border: 2px solid var(--gold) !important;
       box-shadow: none !important;
     }
-    /* Make sure the Font Awesome tick matches gold when floating */
     .cta-primary.floating:before{ color: var(--gold) !important; }
-
-    /* Hover while floating: turn button gray with dark content */
     .cta-primary.floating:hover{
-      background-color: var(--ui-300) !important;   /* gray fill */
-      color: var(--ink-900) !important;             /* dark text */
-      border-color: var(--ui-300) !important;       /* match border to fill */
+      background-color: var(--ui-300) !important;
+      color: var(--ink-900) !important;
+      border-color: var(--ui-300) !important;
       box-shadow: none !important;
     }
     .cta-primary.floating:hover:before{ color: var(--ink-900) !important; }
@@ -135,12 +145,38 @@
     #product-copy h3{ margin:1.2rem 0 .55rem; font-size:1.12rem; font-weight:700; letter-spacing:.14em; text-transform:uppercase; color:var(--ink-800); font-variant-caps:all-small-caps; }
     #product-copy p + h3{ margin-top:1.25rem; }
 
-    /* Swatches */
+    /* Swatches (Color) */
     .color-picker{ display:flex; gap:12px; align-items:center; margin:.25rem 0 .8rem; flex-wrap:wrap; }
     .swatch{ width:46px; height:28px; border-radius:999px; border:1px solid var(--ui-400); cursor:pointer; outline:none; display:inline-flex; align-items:center; justify-content:center; background:#fff; box-shadow:inset 0 0 0 4px rgba(255,255,255,.8); transition:border-color .2s ease, box-shadow .2s ease, transform .12s ease; }
     .swatch:hover{ transform:translateY(-1px); }
     .swatch[aria-checked="true"]{ box-shadow:0 0 0 3px var(--brand-100), inset 0 0 0 4px rgba(255,255,255,.8); border-color:var(--brand); }
     .swatch .dot{ width:100%; height:100%; border-radius:999px; display:block; background-position:center!important; background-repeat:repeat-x!important; background-size:10px 100%!important; }
+
+    /* Size pills */
+    .size-picker{ display:flex; gap:8px; flex-wrap:wrap; margin:.35rem 0 .8rem; }
+    .pill{
+      display:inline-flex; align-items:center; justify-content:center;
+      min-width:42px; height:36px; padding:0 10px; border-radius:999px;
+      border:1px solid var(--ui-400); background:#fff; cursor:pointer;
+      font-weight:600; letter-spacing:.04em;
+      transition:border-color .2s ease, box-shadow .2s ease, transform .12s ease, background .2s ease, color .2s ease;
+    }
+    .pill:hover{ transform:translateY(-1px); }
+    .pill[aria-checked="true"]{ border-color:var(--brand); box-shadow:0 0 0 3px var(--brand-100); }
+
+    /* Quantity */
+    .qty{ display:flex; align-items:center; gap:8px; }
+    .qty button{
+      width:36px; height:36px; border:1px solid var(--ui-400); background:#fff; border-radius:10px;
+      display:inline-flex; align-items:center; justify-content:center; font-weight:700;
+      transition:transform .12s ease, box-shadow .2s ease, border-color .2s ease, background .2s ease;
+      cursor:pointer;
+    }
+    .qty button:hover{ transform:translateY(-1px); box-shadow:var(--shadow-1); }
+    .qty input{
+      width:64px; height:36px; text-align:center; border:1px solid var(--ui-400); border-radius:10px; font-weight:600;
+      background:#fff;
+    }
 
     /* Reveal */
     .reveal{ opacity:0; transform:translateY(14px); transition:opacity 500ms ease, transform 500ms ease; }
@@ -220,14 +256,27 @@
 
             <!-- TOP ACTIONS -->
             <div class="actions-top">
-              <a href="#select" class="button primary icon solid fa-check cta-primary">Add to cart</a>
+              <a href="#select" class="button primary icon solid fa-check cta-primary" id="ctaAdd" disabled>Add to cart</a>
               <a href="index.html#products" class="button">Back to Products</a>
             </div>
 
-            <!-- Swatches + feature chips -->
-            <div class="color-picker" role="radiogroup" aria-label="Choose color"></div>
+            <!-- Step 1: Color -->
+            <h3 class="muted" id="colorLabel">Choose Color</h3>
+            <div class="color-picker" role="radiogroup" aria-labelledby="colorLabel"></div>
 
-            <div class="meta">
+            <!-- Step 2: Size (disabled until color is chosen) -->
+            <h3 id="sizeLabel" class="muted">Choose Size</h3>
+            <div class="size-picker" role="radiogroup" aria-labelledby="sizeLabel" id="sizePicker"></div>
+
+            <!-- Step 3: Quantity (disabled until size is chosen) -->
+            <h3 id="qtyLabel" class="muted">Quantity</h3>
+            <div class="qty" aria-labelledby="qtyLabel">
+              <button type="button" id="qtyMinus" aria-label="Decrease quantity" disabled>−</button>
+              <input id="qtyInput" type="number" value="1" min="1" max="99" disabled aria-live="polite" />
+              <button type="button" id="qtyPlus" aria-label="Increase quantity" disabled>+</button>
+            </div>
+
+            <div class="meta" style="margin-top:1rem">
               <span class="chip">Recycled cotton-rich</span>
               <span class="chip">Chambray trim &amp; belt</span>
               <span class="chip">Unisex, relaxed drape</span>
@@ -243,18 +292,15 @@
               <p><strong>75% cotton, 25% polyester</strong> (recycled-blend). A responsible fabric that balances plush handfeel with lasting performance.</p>
 
               <h3>Fit &amp; Measurements</h3>
-              <p><strong>S/M</strong> — Length (shoulder to hem) 108 cm · Sleeve (neck to cuff) 65 cm · Chest 67 cm<br>
-                 <strong>L/XL</strong> — Length 115 cm · Sleeve 65 cm · Chest 76 cm<br>
-                 <strong>XXL/XXXL</strong> — Length 130 cm · Sleeve 76 cm · Chest 82 cm</p>
-              <p>Drapes with poised ease for a presence that reads relaxed, never bulky.</p>
+              <p>S, M, L — relaxed unisex drape designed for everyday ease.</p>
 
               <h3>Care &amp; Longevity</h3>
               <p>Launder separately before first wear. Natural shrinkage approx. <strong>5%</strong>. Reshape while damp. Machine-wash gentle at <strong>60&nbsp;°C</strong>; iron on medium. Avoid tumble drying and dry-cleaning to preserve structure and texture.</p>
 
               <h3>At-a-Glance</h3>
               <ul>
-                <li><strong>Colours:</strong> Black, Grey</li>
-                <li><strong>Sizes:</strong> S/M, L/XL, XXL/XXXL</li>
+                <li><strong>Colours:</strong> Multiple</li>
+                <li><strong>Sizes:</strong> S, M, L</li>
                 <li><strong>Pattern:</strong> Cell</li>
                 <li><strong>Material category:</strong> Recycled material</li>
                 <li><strong>Specification:</strong> 75% Cotton, 25% Polyester</li>
@@ -374,12 +420,35 @@
     ];
     function requiresContain(publicId){ var name=publicId.split('/').pop(); return NEED_CONTAIN.indexOf(name)!==-1; }
 
-    var currentColorIndex=1, currentImageIndex=0;
-    var mainImg=document.getElementById('mainImage');
-    var thumbsEl=document.getElementById('thumbs');
-    var titleEl=document.getElementById('styleTitle');
-    var colorPickerEl=document.querySelector('.color-picker');
+    /* ---------------- Selection Flow State ---------------- */
+    var selectedColorIndex = null;      // user must pick
+    var currentImageIndex  = 0;
+    var selectedSize = null;            // 'S' | 'M' | 'L'
+    var quantity = 1;
 
+    var mainImg        = document.getElementById('mainImage');
+    var thumbsEl       = document.getElementById('thumbs');
+    var titleEl        = document.getElementById('styleTitle');
+    var colorPickerEl  = document.querySelector('.color-picker');
+    var sizePickerEl   = document.getElementById('sizePicker');
+    var qtyMinus       = document.getElementById('qtyMinus');
+    var qtyPlus        = document.getElementById('qtyPlus');
+    var qtyInput       = document.getElementById('qtyInput');
+    var ctaAdd         = document.getElementById('ctaAdd');
+
+    function enable(elem){ elem.removeAttribute('disabled'); elem.classList.remove('muted'); }
+    function disable(elem){ elem.setAttribute('disabled',''); elem.classList.add('muted'); }
+
+    function updateCTAEnabled(){
+      // Enable CTA only if color & size selected
+      if(selectedColorIndex !== null && selectedSize){
+        ctaAdd.removeAttribute('disabled');
+      } else {
+        ctaAdd.setAttribute('disabled','');
+      }
+    }
+
+    /* ---------- Color Picker ---------- */
     function renderColorPicker(){
       colorPickerEl.innerHTML='';
       PRODUCT.colors.forEach(function(c,idx){
@@ -387,7 +456,7 @@
         btn.className='swatch';
         btn.setAttribute('role','radio');
         btn.setAttribute('aria-label',c.name);
-        btn.setAttribute('aria-checked', idx===currentColorIndex ? 'true' : 'false');
+        btn.setAttribute('aria-checked', (selectedColorIndex===idx) ? 'true' : 'false');
         btn.dataset.index=idx;
 
         var dot=document.createElement('span');
@@ -399,15 +468,86 @@
         btn.appendChild(dot);
 
         btn.addEventListener('click', function(){
-          if(currentColorIndex!==idx){ currentColorIndex=idx; currentImageIndex=0; updateGallery(); updateColorPickA11y(); }
+          if(selectedColorIndex!==idx){
+            selectedColorIndex=idx; currentImageIndex=0;
+            updateGallery();
+            // Enable size step now
+            document.getElementById('sizeLabel').classList.remove('muted');
+            enableSizePicker();
+            updateCTAEnabled();
+          }
+          // update aria
+          colorPickerEl.querySelectorAll('.swatch').forEach((b,i)=>b.setAttribute('aria-checked', i===selectedColorIndex ? 'true' : 'false'));
         });
 
         colorPickerEl.appendChild(btn);
       });
     }
-    function updateColorPickA11y(){
-      colorPickerEl.querySelectorAll('.swatch').forEach((b,i)=>b.setAttribute('aria-checked', i===currentColorIndex ? 'true' : 'false'));
+
+    /* ---------- Size Picker ---------- */
+    function renderSizePicker(disabled){
+      sizePickerEl.innerHTML='';
+      ['S','M','L'].forEach(function(size){
+        var pill=document.createElement('button');
+        pill.className='pill';
+        pill.type='button';
+        pill.textContent=size;
+        pill.setAttribute('role','radio');
+        pill.setAttribute('aria-label', size);
+        pill.setAttribute('aria-checked', (selectedSize===size) ? 'true':'false');
+        if(disabled) pill.setAttribute('disabled','');
+
+        pill.addEventListener('click', function(){
+          if(pill.hasAttribute('disabled')) return;
+          selectedSize=size;
+          sizePickerEl.querySelectorAll('.pill').forEach(p=>p.setAttribute('aria-checked','false'));
+          pill.setAttribute('aria-checked','true');
+          // Enable quantity step
+          document.getElementById('qtyLabel').classList.remove('muted');
+          qtyMinus.removeAttribute('disabled');
+          qtyPlus.removeAttribute('disabled');
+          qtyInput.removeAttribute('disabled');
+          updateCTAEnabled();
+        });
+
+        sizePickerEl.appendChild(pill);
+      });
     }
+    function disableSizePicker(){
+      renderSizePicker(true);
+      selectedSize=null;
+      document.getElementById('qtyLabel').classList.add('muted');
+      qtyMinus.setAttribute('disabled','');
+      qtyPlus.setAttribute('disabled','');
+      qtyInput.setAttribute('disabled','');
+    }
+    function enableSizePicker(){ renderSizePicker(false); }
+
+    /* ---------- Quantity ---------- */
+    qtyMinus.addEventListener('click', function(){
+      var val = Math.max(1, (parseInt(qtyInput.value,10) || 1) - 1);
+      qtyInput.value = val; quantity = val;
+    });
+    qtyPlus.addEventListener('click', function(){
+      var val = Math.min(99, (parseInt(qtyInput.value,10) || 1) + 1);
+      qtyInput.value = val; quantity = val;
+    });
+    qtyInput.addEventListener('input', function(){
+      var v = parseInt(qtyInput.value,10);
+      if(isNaN(v) || v<1) v=1;
+      if(v>99) v=99;
+      qtyInput.value=v; quantity=v;
+    });
+
+    /* ---------- Thumbs / Main image ---------- */
+    function fullUrl(id){ return CLOUDINARY_BASE+FULL_TRANSFORM+id; }
+    function thumbUrl(id){ return CLOUDINARY_BASE+THUMB_TRANSFORM+id; }
+
+    var NEED_CONTAIN=[
+      'Beige_1._ylffja.png','Dark_Green_1._xktrgu.png','Brown_Kid_s_Bathrobe_grupok.png',
+      'Black_1_pogmqf.png','Brown_1._kjvdqs.png','Dark_Blue_1._mpj0zr.png','Dark_Brown_1._cepnap.png'
+    ];
+    function requiresContain(publicId){ var name=publicId.split('/').pop(); return NEED_CONTAIN.indexOf(name)!==-1; }
 
     function renderThumbs(color){
       thumbsEl.innerHTML='';
@@ -428,7 +568,8 @@
     }
 
     function setActiveImage(i){
-      var color=PRODUCT.colors[currentColorIndex];
+      if(selectedColorIndex===null) return;
+      var color=PRODUCT.colors[selectedColorIndex];
       currentImageIndex=i;
       var pid=color.publicIds[i];
       var newSrc=fullUrl(pid);
@@ -437,7 +578,9 @@
       if(requiresContain(pid)) mainImg.classList.add('contain'); else mainImg.classList.remove('contain');
 
       var preload=new Image();
-      preload.onload=function(){ mainImg.src=newSrc; mainImg.alt='Kenno Bathrobe — '+color.name+' — View '+(i+1); mainImg.classList.add('show'); };
+      preload.onload=function(){
+        mainImg.src=newSrc; mainImg.alt='Kenno Bathrobe — '+color.name+' — View '+(i+1); mainImg.classList.add('show');
+      };
       preload.src=newSrc;
 
       titleEl.textContent=('KENNO — '+color.name+' — VIEW '+(i+1)).toUpperCase();
@@ -446,17 +589,34 @@
       var active=document.querySelector('.thumb[data-index="'+(i+1)+'"]'); if(active) active.setAttribute('aria-selected','true');
     }
 
-    function updateGallery(){ var color=PRODUCT.colors[currentColorIndex]; renderThumbs(color); setActiveImage(0); }
+    function updateGallery(){
+      if(selectedColorIndex===null) { // nothing chosen yet; keep initial hero image
+        return;
+      }
+      var color=PRODUCT.colors[selectedColorIndex];
+      renderThumbs(color);
+      setActiveImage(0);
+    }
 
-    (function init(){ renderColorPicker(); updateGallery(); })();
+    (function init(){
+      renderColorPicker();
+      disableSizePicker();  // locked until color chosen
+      updateCTAEnabled();
+    })();
 
-    // Keyboard navigation
+    // Keyboard navigation for gallery (active only after color chosen)
     document.addEventListener('keydown', function(e){
-      var color=PRODUCT.colors[currentColorIndex]; if(!color) return;
+      if(selectedColorIndex===null) return;
+      var color=PRODUCT.colors[selectedColorIndex]; if(!color) return;
       if(e.key==='ArrowRight') setActiveImage((currentImageIndex+1)%color.publicIds.length);
       if(e.key==='ArrowLeft')  setActiveImage((currentImageIndex-1+color.publicIds.length)%color.publicIds.length);
-      if(e.key==='ArrowUp'){ currentColorIndex=(currentColorIndex-1+PRODUCT.colors.length)%PRODUCT.colors.length; currentImageIndex=0; updateGallery(); updateColorPickA11y(); }
-      if(e.key==='ArrowDown'){ currentColorIndex=(currentColorIndex+1)%PRODUCT.colors.length; currentImageIndex=0; updateGallery(); updateColorPickA11y(); }
+    });
+
+    // Add to cart (demo)
+    ctaAdd.addEventListener('click', function(e){
+      if(ctaAdd.hasAttribute('disabled')) { e.preventDefault(); return; }
+      // Here you'd send selectedColorIndex, selectedSize, quantity to your cart system
+      alert('Added to cart:\\nColor: '+PRODUCT.colors[selectedColorIndex].name+'\\nSize: '+selectedSize+'\\nQty: '+quantity);
     });
 
     /* --- CTA motion: starts after a delay, travels to bottom, overlays & turns transparent while moving --- */
@@ -466,9 +626,7 @@
       var cta = document.querySelector('.cta-primary');
       if(!details || !cta) return;
 
-      // When to start moving (px).
       var delayBeforeMove = 64;
-
       var startScrollY = 0;
       var maxShift = 0;
 
@@ -491,13 +649,7 @@
         var afterDelay = y - delayBeforeMove;
         var shift = Math.min(Math.max(afterDelay, 0), maxShift);
         root.style.setProperty('--cta-shift', shift.toFixed(2) + 'px');
-
-        // Toggle floating style (transparent & on top) only when shifting
-        if (shift > 0.5) {
-          cta.classList.add('floating');
-        } else {
-          cta.classList.remove('floating');
-        }
+        if (shift > 0.5) { cta.classList.add('floating'); } else { cta.classList.remove('floating'); }
       }
 
       computeMaxShift();
